--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Rodrigo Cofré"
   avatar           : "profile.png"
   bio              : "Scientist"
-  location         : "Paris, France"
+  location         : "Provence-Alpes-Côte d'Azur, France"
   employer         :
   pubmed           : # "https://pubmed.ncbi.nlm.nih.gov/?term=Cofr%C3%A9%20R&cauthor_id=36464098"
   googlescholar    : "https://scholar.google.fr/citations?user=jbbZoRcAAAAJ&hl=en"
